# dach-jobs-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
dach_jobs/: __init__.py  definitions.py
dach_jobs/assets/: __init__.py  bronze.py  dbt_assets.py
dach_jobs/resources/: __init__.py  kafka_consumer.py  s3.py
dach_jobs_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: read_bronze.sql
dbt/models/: sources.yml
dbt/models/gold/: dim_company.sql  dim_skill.sql  fct_postings.sql  fct_remote_policy_daily.sql  fct_salary_mentions.sql  fct_skill_demand_daily.sql  schema.yml
dbt/models/silver/: schema.yml  silver_posting_tags.sql  silver_postings.sql
dbt/models/staging/: stg_arbeitnow_postings.sql
dbt/seeds/: skill_taxonomy.csv
dbt/snapshots/: snp_postings.sql
docs/: architecture.md  backfill.md  postmortem.md  quickstart.md
ge/: validate.py
ingestion/: arbeitnow.py  contracts.py  kafka_producer.py
scripts/: run_dbt_with_lineage.ps1
streamlit_app/: Home.py
streamlit_app/pages/: 01_Skill_Demand.py  02_Companies.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/: test_arbeitnow.py  test_contracts.py
